--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,28 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hello Ayush</h1>
-    <small>Hello world</small>
+    <form action="/get-form-data" method="post">
+
+    <input 
+     type="text"
+     placeholder="Enter username"
+     name="username"
+    >
+
+    <input 
+     type="text"
+     placeholder="Enter email"
+     name="email"
+    >
+
+    <input 
+     type="password"
+     placeholder="Enter password"
+     name="password"
+    >
+
+    <button>submit</button>
+
+    </form>
 </body>
 </html>
