--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link 
+      rel="stylesheet" 
+      href="index.css">
+
 </head>
 <body>
     <form action="/get-form-data" method="post">
@@ -29,5 +34,8 @@
     <button>submit</button>
 
     </form>
+
+    <script src="/assets/index.js"></script>
+
 </body>
 </html>
